--- a/index.html
+++ b/index.html
@@ -6,5 +6,15 @@
 </head>
 <body>
 <h1>Hello TEST</h1>
+<script>
+  var elem = document.documentElement;
+  if (elem.requestFullScreen) {
+    elem.requestFullScreen();
+  } else if (elem.mozRequestFullScreen) {
+    elem.mozRequestFullScreen();
+  } else if (elem.webkitRequestFullScreen) {
+    elem.webkitRequestFullScreen();
+  }
+</script>
 </body>
 </html>
