--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <meta name="apple-touch-fullscreen" content="yes">
 </head>
 <body>
 <h1>Hello TEST</h1>
