--- a/index.html
+++ b/index.html
@@ -8,14 +8,19 @@
 <body>
 <h1>Hello TEST</h1>
 <script>
-  var elem = document.documentElement;
-  if (elem.requestFullScreen) {
-    elem.requestFullScreen();
-  } else if (elem.mozRequestFullScreen) {
-    elem.mozRequestFullScreen();
-  } else if (elem.webkitRequestFullScreen) {
-    elem.webkitRequestFullScreen();
-  }
+    function fullscreen(){
+      var elem = document.documentElement;
+      if (elem.requestFullScreen) {
+        elem.requestFullScreen();
+      } else if (elem.mozRequestFullScreen) {
+        elem.mozRequestFullScreen();
+      } else if (elem.webkitRequestFullScreen) {
+        elem.webkitRequestFullScreen();
+      }
+    }
+
+    document.body.addEventListener('touchstart', fullscreen)
+
 </script>
 </body>
 </html>
