--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
 
     document.getElementById('foo').addEventListener('click', fullscreen);
 
+    document.body.addEventListener("touchstart", fullscreen, false);
+
 </script>
 </body>
 </html>
