--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 <body>
 <h1>FULLSCREEN TEST</h1>
 <button id="foo">fullscreen</button>
+<iframe allowfullscreen="allowfullscreen" allow="fullscreen" src="https://google.com"></iframe>
 <script>
   window.addEventListener("load", function() { window. scrollTo(0, 0); });
     function fullscreen(){
