--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
     </div>
 </div>
 <script>
-    document.write('<iframe id="game-launch" src="' + location.search.substring(3) + '" width="100%" height="100%" scrolling="no"></iframe>')
+    document.write('<iframe id="game-launch" src="' + location.hash.substring(1) + '" width="100%" height="100%" scrolling="no"></iframe>')
 </script>
 
 
