--- a/index.html
+++ b/index.html
@@ -161,9 +161,9 @@
         <span id="ws-connection-lost-text">Cannot connect to the server. Please reload the page and try again.</span>
     </div>
 </div>
-<script>
-    document.write('<iframe id="game-launch" src="' + location.hash.substring(1) + '" width="100%" height="100%" scrolling="no"></iframe>')
-</script>
+
+<iframe id="game-launch" src="https://nrgs-b2b-cstg.greentube.com/Nrgs/B2B/Web/SwissCasinoSUI/V5/Fun/Games/634/Sessions/D8BC5D5C-9565-423A-91E5-873B5ED399D7/Show/html5?ClientType=mobile-device&FreeSpins=False" width="100%" height="100%" scrolling="no"></iframe>
+
 
 
 
