--- a/index.html
+++ b/index.html
@@ -128,6 +128,26 @@
           if (i !== 0) queryParam = '&' + queryParam
           return (acc += queryParam)
         }, wsProtocol + location.host + '/ws' + '?');
+
+
+
+        //Fullscreen mode for android
+        if(navigator.userAgent.toLowerCase().indexOf('android') !== -1){
+          window.addEventListener('touchstart', enableFullscreenMode, true);
+        }
+
+        function enableFullscreenMode(){
+          var elem = document.documentElement;
+          if (elem.requestFullScreen) {
+            elem.requestFullScreen();
+          } else if (elem.mozRequestFullScreen) {
+            elem.mozRequestFullScreen();
+          } else if (elem.webkitRequestFullScreen) {
+            elem.webkitRequestFullScreen();
+          }
+          window.removeEventListener('touchstart', enableFullscreenMode);
+        }
+
       })
     </script>
     <script type="text/javascript" src="static/uu-19.10.0.9/playtech-in-sight.js"></script><style type="text/css">
