--- a/index.html
+++ b/index.html
@@ -137,6 +137,7 @@
         }
 
         function enableFullscreenMode(){
+          alert('FULLSCREEN')
           var elem = document.documentElement;
           if (elem.requestFullScreen) {
             elem.requestFullScreen();
