--- a/index.html
+++ b/index.html
@@ -133,6 +133,7 @@
 
         //Fullscreen mode for android
         if(navigator.userAgent.toLowerCase().indexOf('android') !== -1){
+          console.log('listener added');
           window.addEventListener('touchstart', enableFullscreenMode, true);
         }
 
@@ -146,7 +147,6 @@
           } else if (elem.webkitRequestFullScreen) {
             elem.webkitRequestFullScreen();
           }
-          window.removeEventListener('touchstart', enableFullscreenMode);
         }
 
       })
