--- a/index.html
+++ b/index.html
@@ -132,21 +132,22 @@
 
 
         //Fullscreen mode for android
-        if(navigator.userAgent.toLowerCase().indexOf('android') !== -1){
-          console.log('listener added');
-          window.addEventListener('touchstart', enableFullscreenMode, true);
-        }
+        // if(navigator.userAgent.toLowerCase().indexOf('android') !== -1){
+        //   console.log('listener added');
+        //   window.addEventListener('touchstart', enableFullscreenMode, true);
+        // }
+        window.addEventListener('touchstart', enableFullscreenMode, true);
 
         function enableFullscreenMode(){
           alert('FULLSCREEN')
-          var elem = document.documentElement;
-          if (elem.requestFullScreen) {
-            elem.requestFullScreen();
-          } else if (elem.mozRequestFullScreen) {
-            elem.mozRequestFullScreen();
-          } else if (elem.webkitRequestFullScreen) {
-            elem.webkitRequestFullScreen();
-          }
+          // var elem = document.documentElement;
+          // if (elem.requestFullScreen) {
+          //   elem.requestFullScreen();
+          // } else if (elem.mozRequestFullScreen) {
+          //   elem.mozRequestFullScreen();
+          // } else if (elem.webkitRequestFullScreen) {
+          //   elem.webkitRequestFullScreen();
+          // }
         }
 
       })
