--- a/index.html
+++ b/index.html
@@ -151,16 +151,17 @@
         document.body.appendChild(fullscreenActivator);
 
         function enableFullscreenMode(){
+
+          var elem = document.documentElement;
+          if (elem.requestFullScreen) {
+            elem.requestFullScreen();
+          } else if (elem.mozRequestFullScreen) {
+            elem.mozRequestFullScreen();
+          } else if (elem.webkitRequestFullScreen) {
+            elem.webkitRequestFullScreen();
+          }
           alert('FULLSCREEN');
           document.body.removeChild(fullscreenActivator);
-          // var elem = document.documentElement;
-          // if (elem.requestFullScreen) {
-          //   elem.requestFullScreen();
-          // } else if (elem.mozRequestFullScreen) {
-          //   elem.mozRequestFullScreen();
-          // } else if (elem.webkitRequestFullScreen) {
-          //   elem.webkitRequestFullScreen();
-          // }
         }
 
       })
