--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             /*width: 1px;*/
             /*min-width: 100%;*/
             /*height: 1px;*/
-            /*min-height: 100%;*/
+            min-height: 600px;
         }
 
         .pop-spinner {
