--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
         #game-launch {
             display: block;
             border: 0;
-            /*width: 1px;*/
-            /*min-width: 100%;*/
-            /*height: 1px;*/
-            min-height: 600px;
+            width: 1px;
+            min-width: 100%;
+            height: 1px;
+            min-height: 100%;
         }
 
         .pop-spinner {
@@ -196,7 +196,7 @@
     </div>
 </div>
 
-<iframe id="game-launch" src="https://nrgs-b2b-cstg.greentube.com/Nrgs/B2B/Web/SwissCasinoSUI/V5/Fun/Games/634/Sessions/D8BC5D5C-9565-423A-91E5-873B5ED399D7/Show/html5?ClientType=mobile-device&FreeSpins=False" width="100%" height="100%" scrolling="no"></iframe>
+<iframe id="game-launch" src="https://nrgs-b2b-cstg.greentube.com/Nrgs/B2B/Web/SwissCasinoSUI/V5/Fun/Games/634/Sessions/CA22CDB5-56C4-4DE6-8834-43292771680E/Show/html5?ClientType=mobile-device&FreeSpins=False" width="100%" height="100%"></iframe>
 
 
 
