--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="mobile-web-app-capable" content="yes">
     <style>
         * {
             padding: 0;
@@ -196,7 +197,7 @@
     </div>
 </div>
 
-<iframe id="game-launch" src="https://nrgs-b2b-cstg.greentube.com/Nrgs/B2B/Web/SwissCasinoSUI/V5/Fun/Games/634/Sessions/0B56B259-B188-486A-9BED-9EB62D0337C4/Show/html5?ClientType=mobile-device&FreeSpins=False" width="100%" height="100%"></iframe>
+<iframe id="game-launch" src="https://nrgs-b2b-cstg.greentube.com/Nrgs/B2B/Web/SwissCasinoSUI/V5/Fun/Games/634/Sessions/4C52F830-FA6C-4552-AE49-4CCD2BA045E4/Show/html5?ClientType=mobile-device&FreeSpins=False" width="100%" height="100%"></iframe>
 
 
 
