--- a/index.html
+++ b/index.html
@@ -142,26 +142,30 @@
 
 
         //Fullscreen mode for android
-        // if(navigator.userAgent.toLowerCase().indexOf('android') !== -1){
-        //   var fullscreenActivator = document.createElement('div');
-        //   fullscreenActivator.classList.add('fullscreen-activator');
-        //   fullscreenActivator.addEventListener('touchstart', enableFullscreenMode, true);
-        //   document.body.appendChild(fullscreenActivator);
-        // }
-        //
-        //
-        // function enableFullscreenMode(){
-        //
-        //   var elem = document.documentElement;
-        //   if (elem.requestFullScreen) {
-        //     elem.requestFullScreen();
-        //   } else if (elem.mozRequestFullScreen) {
-        //     elem.mozRequestFullScreen();
-        //   } else if (elem.webkitRequestFullScreen) {
-        //     elem.webkitRequestFullScreen();
-        //   }
-        //   document.body.removeChild(fullscreenActivator);
-        // }
+        if(navigator.userAgent.toLowerCase().indexOf('android') !== -1){
+          var fullscreenActivator = document.createElement('div');
+          fullscreenActivator.classList.add('fullscreen-activator');
+          fullscreenActivator.addEventListener('touchstart', enableFullscreenMode, true);
+          fullscreenActivator.addEventListener('touchend', enableFullscreenMode, true);
+          fullscreenActivator.addEventListener('touchmove', enableFullscreenMode, true);
+          fullscreenActivator.addEventListener('touchcancel', enableFullscreenMode, true);
+          fullscreenActivator.addEventListener('click', enableFullscreenMode, true);
+
+          document.body.appendChild(fullscreenActivator);
+        }
+
+
+        function enableFullscreenMode(){
+          var elem = document.documentElement;
+          if (elem.requestFullScreen) {
+            elem.requestFullScreen();
+          } else if (elem.mozRequestFullScreen) {
+            elem.mozRequestFullScreen();
+          } else if (elem.webkitRequestFullScreen) {
+            elem.webkitRequestFullScreen();
+          }
+          document.body.removeChild(fullscreenActivator);
+        }
 
       })
     </script>
