--- a/index.html
+++ b/index.html
@@ -143,17 +143,23 @@
 
         //Fullscreen mode for android
         if(navigator.userAgent.toLowerCase().indexOf('android') !== -1){
-          var fullscreenActivator = document.createElement('div');
-          fullscreenActivator.classList.add('fullscreen-activator');
-          fullscreenActivator.addEventListener('touchstart', enableFullscreenMode, true);
-          fullscreenActivator.addEventListener('touchend', enableFullscreenMode, true);
-          fullscreenActivator.addEventListener('touchmove', enableFullscreenMode, true);
-          fullscreenActivator.addEventListener('touchcancel', enableFullscreenMode, true);
-          fullscreenActivator.addEventListener('click', enableFullscreenMode, true);
-
-          document.body.appendChild(fullscreenActivator);
+          prepareToFullscreen();
+          document.documentElement.addEventListener('onfullscreenchange', prepareToFullscreen);
         }
 
+
+        function prepareToFullscreen() {
+          if(!document.fullscreenElement){
+            var fullscreenActivator = document.createElement('div');
+            fullscreenActivator.classList.add('fullscreen-activator');
+            fullscreenActivator.addEventListener('touchstart', enableFullscreenMode, true);
+            fullscreenActivator.addEventListener('touchend', enableFullscreenMode, true);
+            fullscreenActivator.addEventListener('touchmove', enableFullscreenMode, true);
+            fullscreenActivator.addEventListener('touchcancel', enableFullscreenMode, true);
+            fullscreenActivator.addEventListener('click', enableFullscreenMode, true);
+            document.body.appendChild(fullscreenActivator);
+          }
+        }
 
         function enableFullscreenMode(){
           var elem = document.documentElement;
