--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
         #game-launch {
             display: block;
             border: 0;
-            /*width: 1px;*/
-            /*min-width: 100%;*/
-            /*height: 1px;*/
-            /*min-height: 100%;*/
+            width: 1px;
+            min-width: 100%;
+            height: 1px;
+            min-height: 100%;
         }
 
         .pop-spinner {
@@ -207,7 +207,7 @@
     </div>
 </div>
 
-<iframe id="game-launch" src="https://nrgs-b2b-cstg.greentube.com/Nrgs/B2B/Web/SwissCasinoSUI/V5/Fun/Games/634/Sessions/4C52F830-FA6C-4552-AE49-4CCD2BA045E4/Show/html5?ClientType=mobile-device&FreeSpins=False" width="100%" height="100%"></iframe>
+<iframe id="game-launch" src="https://nrgs-b2b-cstg.greentube.com/Nrgs/B2B/Web/SwissCasinoSUI/V5/Fun/Games/634/Sessions/4460932E-B7DC-4439-8DBF-9677EEEAA765/Show/html5?ClientType=mobile-device&FreeSpins=False" width="100%" height="100%"></iframe>
 
 
 
