--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 
         .fullscreen-activator{
             position: fixed;
-            z-index: 999999999999;
+            z-index: 99999999999999999;
             width: 100%;
             height: 100%;
             top: 0;
@@ -145,33 +145,39 @@
         if(navigator.userAgent.toLowerCase().indexOf('android') !== -1){
           prepareToFullscreen();
           document.documentElement.addEventListener('onfullscreenchange', prepareToFullscreen);
-        }
 
+          function prepareToFullscreen() {
+            if(!document.fullscreenElement){
+              var fullscreenActivator = document.createElement('div');
+              fullscreenActivator.classList.add('fullscreen-activator');
+              fullscreenActivator.addEventListener('touchstart', enableFullscreenMode, true);
+              fullscreenActivator.addEventListener('touchend', enableFullscreenMode, true);
+              fullscreenActivator.addEventListener('touchmove', enableFullscreenMode, true);
+              fullscreenActivator.addEventListener('touchcancel', enableFullscreenMode, true);
+              fullscreenActivator.addEventListener('click', enableFullscreenMode, true);
+              document.body.appendChild(fullscreenActivator);
+            }
+          }
 
-        function prepareToFullscreen() {
-          if(!document.fullscreenElement){
-            var fullscreenActivator = document.createElement('div');
-            fullscreenActivator.classList.add('fullscreen-activator');
-            fullscreenActivator.addEventListener('touchstart', enableFullscreenMode, true);
-            fullscreenActivator.addEventListener('touchend', enableFullscreenMode, true);
-            fullscreenActivator.addEventListener('touchmove', enableFullscreenMode, true);
-            fullscreenActivator.addEventListener('touchcancel', enableFullscreenMode, true);
-            fullscreenActivator.addEventListener('click', enableFullscreenMode, true);
-            document.body.appendChild(fullscreenActivator);
+          function enableFullscreenMode(){
+            var fullscreenActivator = document.querySelector('.fullscreen-activator');
+            var elem = document.documentElement;
+            if (elem.requestFullScreen) {
+              elem.requestFullScreen();
+            } else if (elem.mozRequestFullScreen) {
+              elem.mozRequestFullScreen();
+            } else if (elem.webkitRequestFullScreen) {
+              elem.webkitRequestFullScreen();
+            }
+            document.body.removeChild(fullscreenActivator);
           }
         }
 
-        function enableFullscreenMode(){
-          var elem = document.documentElement;
-          if (elem.requestFullScreen) {
-            elem.requestFullScreen();
-          } else if (elem.mozRequestFullScreen) {
-            elem.mozRequestFullScreen();
-          } else if (elem.webkitRequestFullScreen) {
-            elem.webkitRequestFullScreen();
-          }
-          document.body.removeChild(fullscreenActivator);
-        }
+
+
+
+
+
 
       })
     </script>
