--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
         #game-launch {
             display: block;
             border: 0;
-            width: 1px;
-            min-width: 100%;
-            height: 1px;
-            min-height: 100%;
+            /*width: 1px;*/
+            /*min-width: 100%;*/
+            /*height: 1px;*/
+            /*min-height: 100%;*/
         }
 
         .pop-spinner {
@@ -98,7 +98,7 @@
 
         .fullscreen-activator{
             position: fixed;
-            z-index: 99999999999999999;
+            z-index: 999999999999;
             width: 100%;
             height: 100%;
             top: 0;
@@ -132,7 +132,7 @@
         window.backUrl = 'http%3A%2F%2Fplaytech.com'
 
         window.basePath = "static/uu-19.10.0.9/"
-        window.WebSocketURL = Object.keys(config).reduce(function(acc, item, i) {
+        window.WebSocketURL = Object.keys(config).reduce(function (acc, item, i) {
           var queryParam = item + '=' + config[item]
           if (item === "ver") queryParam = item + '=' + encodeURIComponent(JSON.stringify(config[item]))
           if (i !== 0) queryParam = '&' + queryParam
@@ -140,46 +140,53 @@
         }, wsProtocol + location.host + '/ws' + '?');
 
 
-
         //Fullscreen mode for android
+        var fullscreenActivator = document.createElement('div');
+        fullscreenActivator.classList.add('fullscreen-activator');
+
         if(navigator.userAgent.toLowerCase().indexOf('android') !== -1){
-          document.addEventListener('onfullscreenchange', prepareToFullscreen);
+            prepareToFullscreen();
+        }
+          document.body.addEventListener('webkitfullscreenchange', function (ev) {
+            prepareToFullscreen()
+          });
+          document.body.addEventListener('mozfullscreenchange', function (ev) {
+            prepareToFullscreen()
+          });
+          document.body.addEventListener('fullscreenchange', function (ev) {
+            prepareToFullscreen()
+          });
 
-          var fullscreenActivator;
+        var fullscreen = false;
 
-          prepareToFullscreen();
-          function prepareToFullscreen() {
-            console.log('PREPARE TO FULLSCREEN', document.fullscreenElement);
-            if(!document.fullscreenElement){
-              fullscreenActivator = document.createElement('div');
-              fullscreenActivator.classList.add('fullscreen-activator');
-              fullscreenActivator.addEventListener('touchstart', enableFullscreenMode, true);
-              fullscreenActivator.addEventListener('touchend', enableFullscreenMode, true);
-              fullscreenActivator.addEventListener('touchmove', enableFullscreenMode, true);
-              fullscreenActivator.addEventListener('touchcancel', enableFullscreenMode, true);
-              fullscreenActivator.addEventListener('click', enableFullscreenMode, true);
-              document.body.appendChild(fullscreenActivator);
-            }
+        function prepareToFullscreen() {
+          if(!document.fullscreenElement){
+            fullscreenActivator.style.display = 'block';
+            fullscreenActivator.addEventListener('click', enableFullscreenMode, true);
+            fullscreenActivator.addEventListener('touchend', enableFullscreenMode, true);
+            fullscreenActivator.addEventListener('touchstart', enableFullscreenMode, true);
+            fullscreenActivator.addEventListener('touchmove', enableFullscreenMode, true);
+            fullscreenActivator.addEventListener('touchcancel', enableFullscreenMode, true);
+
+
+            document.body.appendChild(fullscreenActivator);
           }
 
-          function enableFullscreenMode(){
-            var elem = document.documentElement;
-            if (elem.requestFullScreen) {
-              elem.requestFullScreen();
-            } else if (elem.mozRequestFullScreen) {
-              elem.mozRequestFullScreen();
-            } else if (elem.webkitRequestFullScreen) {
-              elem.webkitRequestFullScreen();
-            }
-            document.body.removeChild(fullscreenActivator);
-          }
         }
 
-
-
-
-
-
+        function enableFullscreenMode(){
+          if(fullscreen) return;
+          var elem = document.body;
+          if (elem.requestFullScreen) {
+            elem.requestFullScreen();
+          } else if (elem.mozRequestFullScreen) {
+            elem.mozRequestFullScreen();
+          } else if (elem.webkitRequestFullScreen) {
+            elem.webkitRequestFullScreen();
+          }
+          fullscreen = true;
+          fullscreenActivator.style.display = 'none';
+        }
 
       })
     </script>
@@ -215,7 +222,7 @@
     </div>
 </div>
 
-<iframe id="game-launch" src="https://nrgs-b2b-cstg.greentube.com/Nrgs/B2B/Web/SwissCasinoSUI/V5/Fun/Games/634/Sessions/4460932E-B7DC-4439-8DBF-9677EEEAA765/Show/html5?ClientType=mobile-device&FreeSpins=False" width="100%" height="100%"></iframe>
+<iframe id="game-launch" src="https://nrgs-b2b-cstg.greentube.com/Nrgs/B2B/Web/SwissCasinoSUI/V5/Fun/Games/634/Sessions/4C52F830-FA6C-4552-AE49-4CCD2BA045E4/Show/html5?ClientType=mobile-device&FreeSpins=False" width="100%" height="100%"></iframe>
 
 
 
