--- a/index.html
+++ b/index.html
@@ -205,6 +205,7 @@
     <script type="text/javascript" src="static/uu-19.10.0.9/pop-client.js"></script>
 </head>
 <body>
+    <h1>HELLO</h1>
 <div id="pluginContainer"></div>
 <div id="notification-reconnect" class="pop-notification">
     <div class="pop-notification__content">
