--- a/index.html
+++ b/index.html
@@ -9,12 +9,20 @@
         body {
             height: 3000px;
         }
+
+        #fixed{
+            position: fixed;
+            top: 0;
+            left: 0;
+        }
     </style>
 </head>
 <body>
 
-<p id="viewport"></p>
-<p id="screen"></p>
+<div id="fixed">
+    <p id="viewport"></p>
+    <p id="screen"></p>
+</div>
 
 <script>
     const viewport = document.getElementById('viewport');
