--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>TEST 1</title>
     <style>
         body {
-            height: 3000px;
+            /*height: 3000px;*/
         }
 
         #fixed{
