--- a/index.html
+++ b/index.html
@@ -23,21 +23,25 @@
     <p id="viewport"></p>
     <p id="screen"></p>
     <p id="info"></p>
+    <p id="ua"></p>
 </div>
 
 <script>
     const viewport = document.getElementById('viewport');
     const screen = document.getElementById('screen');
     const info = document.getElementById('info');
+    const ua = document.getElementById('ua');
 
     screen.innerHTML = `w ${window.screen.width} : h ${window.screen.height}`;
     viewport.innerHTML = `w ${window.innerWidth} : h${window.innerHeight}`;
+
+    ua.innerText = navigator.userAgent;
 
 
     function preventScroll (ev){
       ev.preventDefault();
       ev.stopImmediatePropagation();
-    };
+    }
 
 
     window.addEventListener('scroll', () => {
