--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
     screen.innerHTML = `screen: w ${window.screen.width} : h ${window.screen.height}`;
     viewport.innerHTML = `viewport: w ${window.innerWidth} : h${window.innerHeight}`;
-    aHeight.innerHTML = `availHeight  ${window.availHeight }`;
+    aHeight.innerHTML = `availHeight  ${window.screen.availHeight }`;
 
     ua.innerText = navigator.userAgent;
 
