--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       }
       screen.innerHTML = `screen: w ${window.screen.width} : h ${window.screen.height}`;
       viewport.innerHTML = `viewport: w ${window.innerWidth} : h${window.innerHeight}`;
-      aHeight.innerHTML = `availHeight  ${window.availHeight }`;
+      aHeight.innerHTML = `availHeight  ${window.screen.availHeight }`;
     });
 </script>
 
