--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
         info.innerText = 'FULLSCREEN';
         window.addEventListener('touchmove', preventScroll, {passive: false});
       } else {
+        window.scroll({top : 0})
         info.innerText = '';
         window.removeEventListener('touchmove', preventScroll);
       }
