--- a/index.html
+++ b/index.html
@@ -56,13 +56,17 @@
       ev.stopImmediatePropagation();
     }
 
+    let fullscreen = false;
+
 
     window.addEventListener('scroll', () => {
-      if(window.innerWidth > window.innerHeight && window.innerHeight == window.screen.width){
+      if(window.innerWidth > window.innerHeight && window.innerHeight == window.screen.width && !fullscreen){
+        fullscreen = true;
         document.body.style.height = '100%';
         info.innerText = 'FULLSCREEN';
         window.addEventListener('touchmove', preventScroll, {passive: false});
       } else {
+        fullscreen = false;
         document.body.style.height = `${window.innerHeight * 2}px`;
         window.scroll({top : 0});
         info.innerText = '';
