--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <p id="aheight"></p>
 
     <p id="info"></p>
-    <p id="ua"></p>
+    <p id="orientation"></p>
 </div>
 
 <script>
@@ -33,8 +33,9 @@
     const screen = document.getElementById('screen');
     const aHeight = document.getElementById('aheight');
     const info = document.getElementById('info');
-    const ua = document.getElementById('ua');
+    // const ua = document.getElementById('ua');
     const safari = document.getElementById('safari');
+    const orientation = document.getElementById('orientation');
 
     screen.innerHTML = `screen: w ${window.screen.width} : h ${window.screen.height}`;
     viewport.innerHTML = `viewport: w ${window.innerWidth} : h ${window.innerHeight}`;
@@ -42,13 +43,13 @@
 
     const userAgent = navigator.userAgent;
 
-    ua.innerText = userAgent;
+    // ua.innerText = userAgent;
 
-    ua.innerText =  (/(iPad|iPhone|iPod)/gi).test(userAgent) &&
+    safari.innerText =  `is safari: ${(/(iPad|iPhone|iPod)/gi).test(userAgent) &&
       !(/CriOS/).test(userAgent) &&
       !(/FxiOS/).test(userAgent) &&
       !(/OPiOS/).test(userAgent) &&
-      !(/mercury/).test(userAgent);
+      !(/mercury/).test(userAgent)}`;
 
 
     function preventScroll (ev){
@@ -57,6 +58,10 @@
     }
 
     let fullscreen = false;
+
+    window.addEventListener("orientationchange", function() {
+      orientation.innerText = `orientation ${window.innerWidth > window.innerHeight ? 'landscape' : 'portrait'}`;
+    }, false);
 
 
     window.addEventListener('scroll', () => {
