--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <p id="screen"></p>
     <p id="aheight"></p>
 
+    <p id="safari"></p>
     <p id="info"></p>
     <p id="orientation"></p>
 </div>
