--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@
     screen.innerHTML = `screen: w ${window.screen.width} : h ${window.screen.height}`;
     viewport.innerHTML = `viewport: w ${window.innerWidth} : h ${window.innerHeight}`;
     aHeight.innerHTML = `available: w ${window.screen.availWidth } : h ${window.screen.availHeight }`;
-    orientation.innerText = `orientation ${window.innerWidth > window.innerHeight ? 'landscape' : 'portrait'}`;
+
+    orientation.innerText = window.screen.orientation.angle;
 
     const userAgent = navigator.userAgent;
 
@@ -64,7 +65,7 @@
     window.addEventListener("resize", function() {
       orientation.innerText = window.screen.orientation.angle;
     }, false);
-    
+
 
     function resetFullscreen (){
       fullscreen = false;
