--- a/index.html
+++ b/index.html
@@ -41,8 +41,7 @@
     screen.innerHTML = `screen: w ${window.screen.width} : h ${window.screen.height}`;
     viewport.innerHTML = `viewport: w ${window.innerWidth} : h ${window.innerHeight}`;
     aHeight.innerHTML = `available: w ${window.screen.availWidth } : h ${window.screen.availHeight }`;
-
-    orientation.innerText = window.screen.orientation.angle;
+    orientation.innerText = `orientation ${window.innerWidth > window.innerHeight ? 'landscape' : 'portrait'}`;
 
     const userAgent = navigator.userAgent;
 
@@ -63,7 +62,7 @@
     let fullscreen = false;
 
     window.addEventListener("resize", function() {
-      orientation.innerText = window.screen.orientation.angle;
+      orientation.innerText = `orientation ${window.innerWidth > window.innerHeight ? 'landscape' : 'portrait'}`;
     }, false);
 
 
