--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <p class="dn" id="screen"></p>
     <p class="dn" id="aheight"></p>
     <p class="dn" id="safari"></p>
-    <p id="info"></p>
+    <p id="info">SWIPE UP</p>
     <p class="dn" id="orientation"></p>
 </div>
 
@@ -60,6 +60,9 @@
 
 
     if(isSafari){
+
+      document.body.style.height = `${window.innerHeight * 2}px`;
+      
       function preventScroll (ev){
         ev.preventDefault();
         ev.stopImmediatePropagation();
