--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
 
       function resetFullscreen (){
-        alert('RESET');
+        // alert('RESET');
         fullscreen = false;
         document.body.style.height = `${window.innerHeight * 2}px`;
         window.scroll({top : 0});
@@ -81,7 +81,7 @@
       }
 
       function processFullscreen(){
-        alert('PROCESS');
+        // alert('PROCESS');
         fullscreen = true;
         document.body.style.height = '100%';
         info.innerText = 'FULLSCREEN';
