--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
             left: 0;
         }
 
-        .dn{
-            display: none;
-        }
+        /*.dn{*/
+        /*    display: none;*/
+        /*}*/
     </style>
 </head>
 <body>
