--- a/index.html
+++ b/index.html
@@ -88,7 +88,11 @@
         window.addEventListener('touchmove', preventScroll, {passive: false});
       }
 
+      // let orientation = window.
 
+      window.addEventListener('resize', () => {
+
+      });
 
       // window.addEventListener("resize", function() {
       //   setTimeout(() => {
